--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,6 +5,12 @@ phases:
       - echo BUILD ENVIRONMENT
       - cd frontend
       - aws s3 sync . $S3_FRONTEND_URL
+      - cd lambda/user-lambda
+      - zip -r lambda.zip *
+      - aws lambda update-function-code --function-name $USER_PROFILE_LAMBDA --zip-file fileb://lambda.zip
+      - cd ../recipe-lambda
+      - zip -r lambda.zip *
+      - aws lambda update-function-code --function-name $RECIPE_PROFILE_LAMBDA --zip-file fileb://lambda.zip
 
 artifacts:
   files:
