--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,7 +5,7 @@ phases:
       - echo BUILD ENVIRONMENT
       - cd frontend
       - aws s3 sync . $S3_FRONTEND_URL
-      - cd lambda/user-profile
+      - cd ../lambda/user-profile
       - zip -r lambda.zip *
       - aws lambda update-function-code --function-name $USER_PROFILE_LAMBDA --zip-file fileb://lambda.zip
       - cd ../recipe-profile
