--- a/cloudformation/template.yaml
+++ b/cloudformation/template.yaml
@@ -56,6 +56,11 @@ Resources:
               - ses:SendRawEmail
             Resource:
               - '*'
+          - Sid: "SearchModeActivate"
+            Effect: "Allow"
+            Action:
+              - dynamodb:*
+            Resource: '*'
       Roles:
         - !Ref LambdaExecutionRole
 
